Issue #143 : Paragraphe d'information, alignement vertical et transition

--- a/src/app/pages/player/assessment/components/swipe/swipe.component.scss
+++ b/src/app/pages/player/assessment/components/swipe/swipe.component.scss
@@ -74,3 +74,14 @@
 .swipe-cards swipe-card:nth-last-child(3) {
   transform: rotate(-5deg);
 }
+
+.informatif {
+  display: flex;
+  height: 60%;
+  flex: 1;
+  margin: auto;
+}
+
+.informatif p {
+  margin: auto;
+}
